# ansible-collection-mitogen

./: .gitignore  README.md  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: ci.yaml  test.yaml
integration_tests/: inventory.yaml  test1.yaml  test2.yaml  test3.yaml
meta/: runtime.yml
molecule/default/: converge.yml  create.yml  molecule.yml
plugins/strategy/: mitogen.py  mitogen_free.py  mitogen_host_pinned.py  mitogen_linear.py  patching.py
test/sanity/: ignore  ignore-2.14.txt  ignore.txt
