[tool.poetry]
name = "ansible-collection-mitogen"
version = "1.0.1"
description = "Ansible collection to expose mitogen strategies with mitogen patching"
authors =["Sergey Putko <psvmcc+ansible-galaxy@gmail.com>", "George Shuklin <george.shuklin@gmail.com>"]
license = "BSD/MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
ansible-core = "2.15"
black = "^23.1.0"
mitogen = {git = "https://github.com/mitogen-hq/mitogen", rev = "master"}
molecule = "^4.0.4"
yamllint = "^1.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
