[tool.poetry]
name = "ansible-collection-mitogen"
version = "1.0.1"
description = "Ansible collection to expose mitogen strategies with mitogen patching"
authors =["Sergey Putko <psvmcc+ansible-galaxy@gmail.com>", "George Shuklin <george.shuklin@gmail.com>"]
license = "BSD/MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
ansible-core = ">=2.17, <2.18"
black = "^23.1.0"
mitogen = "0.3.12"
molecule = ">=5.0.0"
yamllint = "^1.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
